--- a/index.html
+++ b/index.html
@@ -35,4 +35,8 @@
         <div id="app"></div>
         <!-- built files will be auto injected -->
     </body>
+    <script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
+    <script>
+        sessionStorage.setItem('IP', returnCitySN['cip']);
+    </script>
 </html>
